multilinguisme : fr, es, en - multi-devise : XOF, Dollar, euro - finalisation de facture et contrat